<resources>
    <string name="app_name">FileScanner</string>
    <string name="b_amp_w"><![CDATA[B&W]]></string>
    <string name="original">Original</string>
    <string name="save">Save</string>
    <string name="import_image">Import Image</string>
    <string name="sharpen">Sharpen</string>
    <string name="b_amp_w2"><![CDATA[B&W2]]></string>
    <string name="open_in_file_explorer">Open in file explorer</string>
    <string name="lighten">Lighten</string>
</resources>