<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransformImageActivity">

    <ImageView
        android:id="@+id/transformed_image"
        android:layout_width="match_parent"
        android:layout_height="600dp" >
    </ImageView>

    <LinearLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/transformed_image"
        android:layout_alignParentBottom="true">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/original"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/sharpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharpen"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/b_w_adaptive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_amp_w"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/b_w_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_amp_w2"
                    android:singleLine="true"/>

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>